--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.17.0'
       - name: Install cross-compilation tools
         run: |
           set -ex
@@ -121,12 +123,12 @@ jobs:
           echo name=TAG::$name >> $GITHUB_ENV
         id: tagname
 
-      # ... and if this was an actual push (tag or `dev`) then we publish a
+      # ... and if this was an actual push (vXX.XX.XX tag only) then we publish a
       # new release. This'll automatically publish a tag release or update `dev`
       # with this `sha`
       - name: Publish Release
         uses: ./.github/actions/github-release
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/tags/v'))
+        if: github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/v'))
         with:
           files: "dist/*"
           name: ${{ steps.tagname.outputs.val }}
